--- a/lab4/lab4_hw.Rmd
+++ b/lab4/lab4_hw.Rmd
@@ -1,16 +1,21 @@
 ---
 title: "Lab 4 Homework"
-author: "Please Add Your Name Here"
+author: Carmen Doria
 date: "`r Sys.Date()`"
 output:
   html_document: 
     theme: spacelab
-    keep_md: yes
+    keep_md: true
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+```{r}
+#install.packages("palmerpenguins")
+```
+
 
 ## Instructions
 Answer the following questions and complete the exercises in RMarkdown. Please embed all of your code and push your final work to your repository. Your final lab report should be organized, clean, and run free from errors. Remember, you must remove the `#` for the included code chunks to run. Be sure to add your name to the author header above.  
@@ -31,32 +36,74 @@ Data: http://datadryad.org/resource/doi:10.5061/dryad.q5j65/1
 
 **1. Load the data into a new object called `homerange`.**
 ```{r}
-
+homerange <- read_csv("data/Tamburelloetal_HomeRangeDatabase.csv")
 ```
 
 **2. Explore the data. Show the dimensions, column names, classes for each variable, and a statistical summary. Keep these as separate code chunks.**  
-```{r}
 
+```{r}
+dim(homerange)
+```
+```{r}
+names(homerange)
 ```
 
-**3. Change the class of the variables `taxon` and `order` to factors and display their levels.**  
 ```{r}
-
+summary(homerange)
 ```
 
-**4. What taxa are represented in the `homerange` data frame? Make a new data frame `taxa` that is restricted to taxon, common name, class, order, family, genus, species.**  
-```{r}
 
+```{r}
+glimpse(homerange)
+```
+
+```{r}
+class(homerange)
+```
+
+
+**3. Change the class of the variables `taxon` and `order` to factors and display their levels.** 
+
+## Setting the class of variables to factors 
+```{r}
+homerange$taxon <- factor(homerange$taxon)
+```
+
+```{r}
+homerange$order <- factor(homerange$order)
+```
+
+## Displaying levels
+```{r}
+levels(homerange$taxon)
+```
+```{r}
+levels(homerange$order)
+```
+## Checking to see if the code worked
+```{r}
+class(homerange$taxon)
+```
+```{r}
+class(homerange$order)
+```
+
+**4. What taxa are represented in the `homerange` data frame? Make a new data frame `taxa` that is restricted to taxon, common name, class, order, family, genus, species.** 
+
+```{r}
+taxa <- select(homerange, "taxon", "common.name", "class", "order", "family", "genus", "species")
+taxa
 ```
 
 **5. The variable `taxon` identifies the common name groups of the species represented in `homerange`. Make a table the shows the counts for each of these `taxon`.**  
 ```{r}
-
+count(homerange, taxon)
 ```
 
-**6. The species in `homerange` are also classified into trophic guilds. How many species are represented in each trophic guild.**  
+**6. The species in `homerange` are also classified into trophic guilds. How many species are represented in each trophic guild.** 
+There are 13 species repsresented. 7 species are carnivores, and 6 are herbivores. 
 ```{r}
-
+count(homerange, taxon, trophic.guild)
 ```
 
 
