--- a/lab4/lab4_hw.Rmd
+++ b/lab4/lab4_hw.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output:
   html_document: 
     theme: spacelab
-    keep_md: yes
+    keep_md: true
 ---
 
 ```{r setup, include=FALSE}
@@ -128,33 +128,58 @@ only_herbivores <- filter(homerange, trophic.guild =="herbivore")
 only_herbivores
 ```
 
-**8. Do herbivores or carnivores have, on average, a larger `mean.hra.m2`? Remove any NAs from the data.**  
+**8. Do herbivores or carnivores have, on average, a larger `mean.hra.m2`? Remove any NAs from the data.** 
+On average it appears that carnivores have a larger `mean.hra.m2`.
+
 ```{r}
-mean(only_carnivores$"mean.hra.m2", na.rm = T)
+carnivores_mean <- table(only_carnivores$mean.hra.m2)
+mean(carnivores_mean, na.rm = T)
 ```
 
 ```{r}
-mean(only_herbivores$"mean.hra.m2", na.rm = T)
+herbivores_mean <- table(only_herbivores$mean.hra.m2)
+mean(herbivores_mean, na.rm = T)
 
 ```
 
 **9. Make a new dataframe `owls` that is limited to the mean mass, log10 mass, family, genus, and species of owls in the database. Which is the smallest owl? What is its common name? Do a little bit of searching online to see what you can learn about this species and provide a link below** 
-```{r}
-names(homerange)
-```
-```{r}
-owls <- filter(homerange, )
-```
+
+The smallest owl was the glaucidium	passerinum which is the Eurasian pygmy owl. More info on the Eurasian pygmy owl [here.](https://animaldiversity.org/accounts/Glaucidium_passerinum/)
 
 
+Make a different dataframe that selects for mean mass, log10 mass, family, genus, and species 
 ```{r}
-homerange_subset <- select(homerange, "mean.mass.g", "log10.mass", "family", "genus", "species")
-homerange_subset
+owl_subset <- select(homerange, "mean.mass.g", "log10.mass", "family", "genus", "species")
+owl_subset
 ```
 
-**10. As measured by the data, which bird species has the largest homerange? Show all of your work, please. Look this species up online and tell me about it!**.  
+Now make the owl dataframe
 ```{r}
+owls <- filter(owl_subset, family == "strigidae")
+owls
+```
 
+find smallest owl
+```{r}
+sorted_owls <- arrange(owls, mean.mass.g)
+sorted_owls
+```
+
+
+**10. As measured by the data, which bird species has the largest homerange? Show all of your work, please. Look this species up online and tell me about it!**. 
+
+The bird with the largest homerange is the carcara cheriway or the Northern crested caracara. 
+```{r}
+birds <- filter(homerange, taxon == "birds")
+```
+
+
+```{r}
+bird_subset <- select(birds, genus, species, mean.mass.g, log10.mass, mean.hra.m2, log10.hra)
+```
+
+```{r}
+arrange(bird_subset, desc(mean.hra.m2))
 ```
 
 ## Push your final code to GitHub!
