--- a/lab6/lab6_2.Rmd
+++ b/lab6/lab6_2.Rmd
@@ -4,9 +4,9 @@ date: "`r Sys.Date()`"
 output:
   html_document: 
     theme: spacelab
-    toc: yes
-    toc_float: yes
-    keep_md: yes
+    toc: true
+    toc_float: true
+    keep_md: true
 ---
 
 ## Learning Goals  
@@ -17,11 +17,22 @@ output:
 ## Instructions
 For the second part of lab today, we are going to spend time practicing the dplyr functions we have learned and add a few new ones. This lab doubles as your homework. Please complete the lab and push your final code to GitHub.  
 
+```{r}
+#install.packages("tidyverse")
+#install.packages("palmerpenguins")
+```
+
+```{r}
+#install.packages("janitor")
+```
+
+
 ## Load the libraries
 ```{r}
 library("tidyverse")
 library("janitor")
 ```
+
 
 ## Load the superhero data
 These are data taken from comic books and assembled by fans. The include a good mix of categorical and continuous data.  Data taken from: https://www.kaggle.com/claudiodavi/superhero-set  
@@ -55,7 +66,7 @@ tabyl(superhero_info, alignment)
 ```
 
 1. Who are the publishers of the superheros? Show the proportion of superheros from each publisher. Which publisher has the highest number of superheros?
-The publsiher with the highest number of superheros is Marvel Comics.
+The publisher with the highest number of superheros is Marvel Comics.
 
 ```{r}
 superhero_info %>%
@@ -77,7 +88,9 @@ superhero_info %>%
 3. Let's say we are only interested in the variables name, alignment, and "race". How would you isolate these variables from `superhero_info`?
 ```{r}
 superhero_info %>%
-  select(name, alignment, race)
+  select(name, alignment, race) %>%
+  filter(is.na(race) | tolower(race) %in% c("human"))
+#not counting hybrids as human 
 ```
 
 
@@ -85,8 +98,9 @@ superhero_info %>%
 4. List all of the superheros that are not human.
 ```{r}
 superhero_info %>%
-  select(name, alignment, race)
-  filter(race )
+  select(name, alignment, race) %>%
+  filter(!(tolower(race) %in% c("human")) | is.na(race))
+
 ```
 
 
@@ -112,6 +126,7 @@ tabyl(good_guys, race)
 
 
 7. Among the good guys, Who are the Vampires?
+
 The Vampires are Angel and Blade. 
 ```{r}
 filter(good_guys, race == "Vampire")
@@ -134,31 +149,83 @@ bad_guys %>%
 
 
 9. Are there more good guys or bad guys with green hair?
+
+It appears that there are more good guys with green hair. 
 ```{r}
 names(good_guys)
 ```
 
 ```{r}
-
+good_guys %>%
+  filter(hair_color == "Green")
+```
+```{r}
+bad_guys %>% 
+  filter(hair_color == "Green")
 ```
 
 
 
 10. Let's explore who the really small superheros are. In the `superhero_info` data, which have a weight less than 50? Be sure to sort your results by weight lowest to highest.  
+```{r}
+superhero_info %>% 
+  select(name, weight) %>% 
+  filter(weight < 50) %>% 
+  arrange(weight)
+```
 
 11. Let's make a new variable that is the ratio of height to weight. Call this variable `height_weight_ratio`.    
+```{r}
+height_weight_ratio <- superhero_info %>% 
+  mutate(height_weight_ratio = height/weight) %>% 
+  select(name, height_weight_ratio) %>% 
+  arrange(desc(height_weight_ratio))
+```
 
-12. Who has the highest height to weight ratio?  
+12. Who has the highest height to weight ratio?
+
+Groot has the highest height to weight ratio. 
+```{r}
+height_weight_ratio
+```
 
 ## `superhero_powers`
 Have a quick look at the `superhero_powers` data frame.  
+```{r}
+superhero_powers <- clean_names(superhero_powers)
+```
+
 
 13. How many superheros have a combination of agility, stealth, super_strength, stamina?
+
+40 superheros have a combination of agility, stealth, super_strength, stamina?
+```{r}
+names(superhero_powers)
+```
+
+```{r}
+superhero_powers %>%
+  select(hero_names, agility, stealth, super_strength, stamina) %>% 
+  filter(agility & stealth & super_strength & stamina)
+```
 
 ## Your Favorite
 14. Pick your favorite superhero and let's see their powers!  
 
+```{r}
+names(superhero_powers)
+```
+
+```{r}
+superhero_powers %>%
+  filter(hero_names == "Deadpool")
+```
+
 15. Can you find your hero in the superhero_info data? Show their info!  
+```{r}
+superhero_info %>% 
+  filter(name == "Deadpool")
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences.  
