--- a/lab6/lab6_1.Rmd
+++ b/lab6/lab6_1.Rmd
@@ -4,9 +4,9 @@ date: "`r Sys.Date()`"
 output:
   html_document: 
     theme: spacelab
-    toc: yes
-    toc_float: yes
-    keep_md: yes
+    toc: true
+    toc_float: true
+    keep_md: true
   pdf_document:
     toc: yes
 ---
