--- a/lab7/lab7_hw.Rmd
+++ b/lab7/lab7_hw.Rmd
@@ -33,66 +33,124 @@ fisheries <- readr::read_csv(file = "data/FAO_1950to2012_111914.csv")
 
 1. Do an exploratory analysis of the data (your choice). What are the names of the variables, what are the dimensions, are there any NA's, what are the classes of the variables?  
 ```{r}
-
+dim(fisheries)
+```
+```{r}
+names(fisheries)
+```
+```{r}
+class(fisheries)
+```
+```{r}
+any(is.na(fisheries))
 ```
 
 2. Use `janitor` to rename the columns and make them easier to use. As part of this cleaning step, change `country`, `isscaap_group_number`, `asfis_species_number`, and `fao_major_fishing_area` to data class factor. 
 ```{r}
+fisheries <- clean_names(fisheries)
+```
 
+```{r}
+fisheries <- fisheries %>% 
+  mutate(across(c("country", "isscaap_group_number", "asfis_species_number", "fao_major_fishing_area"), factor))
+```
+
+Testing to see if it worked
+```{r}
+class(fisheries$country)
 ```
 
 We need to deal with the years because they are being treated as characters and start with an X. We also have the problem that the column names that are years actually represent data. We haven't discussed tidy data yet, so here is some help. You should run this ugly chunk to transform the data for the rest of the homework. It will only work if you have used janitor to rename the variables in question 2!  
 ```{r}
-#fisheries_tidy <- fisheries %>% 
-#  pivot_longer(-c(country,common_name,isscaap_group_number,isscaap_taxonomic_group,asfi#s_species_number,asfis_species_name,fao_major_fishing_area,measure),
-#               names_to = "year",
-#               values_to = "catch",
-#               values_drop_na = TRUE) %>% 
-#  mutate(year= as.numeric(str_replace(year, 'x', ''))) %>% 
-#  mutate(catch= str_replace(catch, c(' F'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('...'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('-'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('0 0'), replacement = ''))
+fisheries_tidy <- fisheries %>% 
+  pivot_longer(-c(country,common_name,isscaap_group_number,isscaap_taxonomic_group,asfis_species_number,asfis_species_name,fao_major_fishing_area,measure),
+               names_to = "year",
+               values_to = "catch",
+               values_drop_na = TRUE) %>% 
+  mutate(year= as.numeric(str_replace(year, 'x', ''))) %>% 
+  mutate(catch= str_replace(catch, c(' F'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('...'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('-'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('0 0'), replacement = ''))
 
-#fisheries_tidy$catch <- as.numeric(fisheries_tidy$catch)
+fisheries_tidy$catch <- as.numeric(fisheries_tidy$catch)
 ```
 
 3. How many countries are represented in the data? Provide a count and list their names.
+203 countries are represented in the data. 
 ```{r}
-
+fisheries_tidy %>% 
+  count(country)
 ```
 
 4. Refocus the data only to include country, isscaap_taxonomic_group, asfis_species_name, asfis_species_number, year, catch.
 ```{r}
+names(fisheries_tidy)
+```
 
+```{r}
+fisheries_tidy %>% 
+  select(country, isscaap_taxonomic_group, asfis_species_name, asfis_species_number, year, catch)
 ```
 
 5. Based on the asfis_species_number, how many distinct fish species were caught as part of these data?
+1551 distinct species were caught. 
 ```{r}
-
+fisheries_tidy %>% 
+  summarise(n_asfis_species_number = n_distinct(asfis_species_number),
+            total = n())
 ```
 
 6. Which country had the largest overall catch in the year 2000?
+China with a catch of 9068. 
 ```{r}
-
+fisheries_tidy %>% 
+  group_by(country, year) %>%
+  summarise(max_catch = max(catch, na.rm = T),
+            total = n(), .groups= 'keep') %>%
+  filter(year == 2000) %>% 
+  arrange(desc(max_catch))
 ```
 
 7. Which country caught the most sardines (_Sardina pilchardus_) between the years 1990-2000?
+Morocco caught the most sardines. 
 ```{r}
-
+fisheries_tidy %>%
+  filter(asfis_species_name == "Sardina pilchardus" & between (year, 1990, 2000)) %>% 
+  group_by(country, year) %>%
+  summarise(max_sardines = max(catch, na.rm = T)) %>% 
+  arrange(desc(max_sardines))
 ```
 
 8. Which five countries caught the most cephalopods between 2008-2012?
+India, China, Italy, Spain, and Algeria. 
 ```{r}
-
+fisheries_tidy %>%
+  filter(asfis_species_name == "Cephalopoda" & between(year, 2008, 2012)) %>% 
+  group_by(country) %>% 
+  summarise(max_cephalopods = max(catch, na.rm = T)) %>% 
+  arrange(desc(max_cephalopods))
 ```
 
 9. Which species had the highest catch total between 2008-2012? (hint: Osteichthyes is not a species)
+Marine fishes nei had the highest catch total between 2008 and 2012.
 ```{r}
-
+fisheries_tidy %>%
+  filter(between(year, 2008, 2012)) %>% 
+  group_by(common_name) %>% 
+  summarise(max_species_catch = max(catch, na.rm = T)) %>% 
+  arrange(desc(max_species_catch))
 ```
 
 10. Use the data to do at least one analysis of your choice.
+What was the mean amount of sardines caught in 1999? The mean sardine catch was 62.73
+```{r}
+fisheries_tidy %>% 
+  filter(asfis_species_name == "Sardina pilchardus") %>% 
+  group_by(asfis_species_name) %>% 
+  summarise(mean_sardine_catch = mean(catch, na.rm = T))
+```
+
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences.   
