--- a/homework/hw7.Rmd
+++ b/homework/hw7.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 7"
-author: "Your Name Here"
+author: Carmen Doria
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -49,6 +49,9 @@ amphibio <- read_csv("data/amphibio.csv") %>% clean_names()
 ```{r}
 dim(amniota)
 ```
+
+
+
 ```{r}
 glimpse(amniota)
 ```
@@ -57,6 +60,8 @@ glimpse(amniota)
 ```{r}
 dim(amphibio)
 ```
+
+
 ```{r}
 str(amphibio)
 ```
@@ -67,6 +72,8 @@ There are no NA's that this function can find but they are represented in this d
 amniota %>% 
   summarize_all(~sum(is.na(.)))
 ```
+
+
 ```{r}
 amphibio %>% 
   summarise_all(~sum(is.na(.)))
@@ -77,33 +84,7 @@ amphibio %>%
 
 ```{r}
 amniota_tidy <- amniota %>% 
-  replace_with_na(replace = list(litters_or_clutches_per_y = -999, 
-                                 no_sex_maturity_d = -999, 
-                                 no_sex_svl_cm = -999, 
-                                 female_body_mass_at_maturity_g= -999, 
-                                 birth_or_hatching_svl_cm= -999, 
-                                 female_svl_cm = -999, 
-                                 male_svl_cm= -999, 
-                                 adult_svl_cm= -999,
-                                fledging_mass_g = -999, 
-                                 egg_length_mm = -999, 
-                                 egg_width_mm  = -999, 
-                                 no_sex_body_mass_g = -999, 
-                                 inter_litter_or_interbirth_interval_y = -999, 
-                                  male_maturity_d= -999, 
-                                 longevity_y = -999, 
-                                 fledging_age_d= -999,
-                                  incubation_d = -999, 
-                                 egg_mass_g = -999, 
-                                 weaning_weight_g = -999, 
-                                birth_or_hatching_weight_g  = -999, 
-                                weaning_d= -999, 
-                                gestation_d= -999, 
-                                 maximum_longevity_y = -999, 
-                                litter_or_clutch_size_n = -999,
-                                subspecies = -999,
-                                female_maturity_d= -999)) %>% 
-miss_var_summary()
+  replace_with_na_all(condition = ~.x == -999)
 ```
 
 
@@ -122,7 +103,7 @@ naniar::miss_var_summary(amphibio)
 
 
 ```{r}
-amniota_egg_mass <- amniota %>% 
+amniota_egg_mass <- amniota_tidy %>% 
   select(class, egg_mass_g) %>% 
   group_by(class) %>% 
   summarise_all(~sum(is.na(.)))
