--- a/homework/hw11.md
+++ b/homework/hw11.md
@@ -1,16 +1,14 @@
 ---
 title: "Lab 11 Homework"
 author: Carmen Doria
-date: "`r Sys.Date()`"
+date: "2024-02-23"
 output:
   html_document: 
     theme: spacelab
     keep_md: true
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+
 
 ## Instructions
 Answer the following questions and complete the exercises in RMarkdown. Please embed all of your code and push your final work to your repository. Your final lab report should be organized, clean, and run free from errors. Remember, you must remove the `#` for the included code chunks to run. Be sure to add your name to the author header above. For any included plots, make sure they are clearly labeled. You are free to use any plot type that you feel best communicates the results of your analysis.  
@@ -20,14 +18,16 @@ Answer the following questions and complete the exercises in RMarkdown. Please e
 Make sure to use the formatting conventions of RMarkdown to make your report neat and clean!  
 
 ## Load the libraries
-```{r message=FALSE, warning=FALSE}
+
+```r
 library(tidyverse)
 library(janitor)
 library(here)
 library(naniar)
-``` 
+```
 
-```{r}
+
+```r
 options(scipen = 999)
 ```
 
@@ -36,7 +36,8 @@ The idea for this assignment came from [Rebecca Barter's](http://www.rebeccabart
 
 ## Gapminder
 For this assignment, we are going to use the dataset [gapminder](https://cran.r-project.org/web/packages/gapminder/index.html). Gapminder includes information about economics, population, and life expectancy from countries all over the world. You will need to install it before use. This is the same data that we will use for midterm 2 so this is good practice.
-```{r}
+
+```r
 #install.packages("gapminder")
 library("gapminder")
 ```
@@ -45,35 +46,82 @@ library("gapminder")
 The questions below are open-ended and have many possible solutions. Your approach should, where appropriate, include numerical summaries and visuals. Be creative; assume you are building an analysis that you would ultimately present to an audience of stakeholders. Feel free to try out different `geoms` if they more clearly present your results.  
 
 **1. Use the function(s) of your choice to get an idea of the overall structure of the data frame, including its dimensions, column names, variable classes, etc. As part of this, determine how NAs are treated in the data.** 
-```{r}
+
+```r
 gapminder <- gapminder %>% clean_names()
 ```
 
 
-```{r}
+
+```r
 summary(gapminder)
 ```
 
-```{r}
+```
+##         country        continent        year         life_exp    
+##  Afghanistan:  12   Africa  :624   Min.   :1952   Min.   :23.60  
+##  Albania    :  12   Americas:300   1st Qu.:1966   1st Qu.:48.20  
+##  Algeria    :  12   Asia    :396   Median :1980   Median :60.71  
+##  Angola     :  12   Europe  :360   Mean   :1980   Mean   :59.47  
+##  Argentina  :  12   Oceania : 24   3rd Qu.:1993   3rd Qu.:70.85  
+##  Australia  :  12                  Max.   :2007   Max.   :82.60  
+##  (Other)    :1632                                                
+##       pop               gdp_percap      
+##  Min.   :     60011   Min.   :   241.2  
+##  1st Qu.:   2793664   1st Qu.:  1202.1  
+##  Median :   7023596   Median :  3531.8  
+##  Mean   :  29601212   Mean   :  7215.3  
+##  3rd Qu.:  19585222   3rd Qu.:  9325.5  
+##  Max.   :1318683096   Max.   :113523.1  
+## 
+```
+
+
+```r
 glimpse(gapminder)
 ```
-```{r}
+
+```
+## Rows: 1,704
+## Columns: 6
+## $ country    <fct> "Afghanistan", "Afghanistan", "Afghanistan", "Afghanistan",…
+## $ continent  <fct> Asia, Asia, Asia, Asia, Asia, Asia, Asia, Asia, Asia, Asia,…
+## $ year       <int> 1952, 1957, 1962, 1967, 1972, 1977, 1982, 1987, 1992, 1997,…
+## $ life_exp   <dbl> 28.801, 30.332, 31.997, 34.020, 36.088, 38.438, 39.854, 40.…
+## $ pop        <int> 8425333, 9240934, 10267083, 11537966, 13079460, 14880372, 1…
+## $ gdp_percap <dbl> 779.4453, 820.8530, 853.1007, 836.1971, 739.9811, 786.1134,…
+```
+
+```r
 str(gapminder)
+```
+
+```
+## tibble [1,704 × 6] (S3: tbl_df/tbl/data.frame)
+##  $ country   : Factor w/ 142 levels "Afghanistan",..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ continent : Factor w/ 5 levels "Africa","Americas",..: 3 3 3 3 3 3 3 3 3 3 ...
+##  $ year      : int [1:1704] 1952 1957 1962 1967 1972 1977 1982 1987 1992 1997 ...
+##  $ life_exp  : num [1:1704] 28.8 30.3 32 34 36.1 ...
+##  $ pop       : int [1:1704] 8425333 9240934 10267083 11537966 13079460 14880372 12881816 13867957 16317921 22227415 ...
+##  $ gdp_percap: num [1:1704] 779 821 853 836 740 ...
 ```
 
 
 **2. Among the interesting variables in gapminder is life expectancy. How has global life expectancy changed between 1952 and 2007?**
-```{r}
+
+```r
 gapminder %>%
   filter(between(year, 1952, 2007)) %>% 
   ggplot(aes(x = as.factor(year), y = life_exp, group = year)) +
   geom_col()+
   labs(title = "Global Life Expectancy Between 1952 & 2007")
-  
 ```
 
+![](hw11_files/figure-html/unnamed-chunk-8-1.png)<!-- -->
+
 **3. How do the distributions of life expectancy compare for the years 1952 and 2007?**
-```{r}
+
+```r
 gapminder %>% 
   filter(year == 1952 | year == 2007) %>% 
   ggplot(aes(x = year, y = life_exp))+
@@ -81,9 +129,12 @@ gapminder %>%
   labs(title = "Life Expectancy for 1952 & 2007")
 ```
 
+![](hw11_files/figure-html/unnamed-chunk-9-1.png)<!-- -->
+
 
 **4. Your answer above doesn't tell the whole story since life expectancy varies by region. Make a summary that shows the min, mean, and max life expectancy by continent for all years represented in the data.**
-```{r}
+
+```r
 gapminder %>% 
   group_by(life_exp) %>% 
   ggplot(aes(x = continent, y = life_exp, fill = continent))+
@@ -91,23 +142,27 @@ gapminder %>%
   labs(title = " Life Expectancy by Continent")
 ```
 
+![](hw11_files/figure-html/unnamed-chunk-10-1.png)<!-- -->
+
 
 **5. How has life expectancy changed between 1952-2007 for each continent?**
-```{r}
 
-```
 
 
 **6. We are interested in the relationship between per capita GDP and life expectancy; i.e. does having more money help you live longer?**
-```{r}
+
+```r
 gapminder %>% 
   ggplot(aes(x = gdp_percap, y = life_exp, color = continent))+
   geom_point()+
   labs(title = "Life Expectancy v. Per Capita GDP")
 ```
 
+![](hw11_files/figure-html/unnamed-chunk-12-1.png)<!-- -->
+
 **7. Which countries have had the largest population growth since 1952?**
-```{r}
+
+```r
 gapminder %>% 
   select(country, year, pop) %>% 
   filter(year == 1952 | year == 2007) %>% 
@@ -117,9 +172,27 @@ gapminder %>%
   arrange(desc(pop_since))
 ```
 
+```
+## # A tibble: 142 × 4
+##    country          `1952`     `2007` pop_since
+##    <fct>             <int>      <int>     <int>
+##  1 China         556263527 1318683096 762419569
+##  2 India         372000000 1110396331 738396331
+##  3 United States 157553000  301139947 143586947
+##  4 Indonesia      82052000  223547000 141495000
+##  5 Brazil         56602560  190010647 133408087
+##  6 Pakistan       41346560  169270617 127924057
+##  7 Bangladesh     46886859  150448339 103561480
+##  8 Nigeria        33119096  135031164 101912068
+##  9 Mexico         30144317  108700891  78556574
+## 10 Philippines    22438691   91077287  68638596
+## # ℹ 132 more rows
+```
+
 
 **8. Use your results from the question above to plot population growth for the top five countries since 1952.**
-```{r}
+
+```r
 gapminder %>% 
   filter(country == "China"| country == "India"| country== "United States" | country == "Indonesia"| country == "Brazil") %>% 
   ggplot(aes(x = year, y = pop, fill= country))+
@@ -127,9 +200,12 @@ gapminder %>%
   labs(title = "Population Growth for Top Five Countries Since 1952")
 ```
 
+![](hw11_files/figure-html/unnamed-chunk-14-1.png)<!-- -->
+
 
 **9. How does per capita GDP growth compare between these same five countries?**
-```{r}
+
+```r
 gapminder %>% 
   filter(country == "China"| country == "India"| country== "United States" | country == "Indonesia"| country == "Brazil") %>% 
   ggplot(aes(x = year, y = gdp_percap, fill= country))+
@@ -137,13 +213,18 @@ gapminder %>%
   labs(title = "Per Capita Growth by Year")
 ```
 
+![](hw11_files/figure-html/unnamed-chunk-15-1.png)<!-- -->
+
 **10. Make one plot of your choice that uses faceting!**
-```{r}
+
+```r
 gapminder %>% 
   filter(country == "United States"|country == "Mexico") %>% 
   ggplot(aes(x= year, y = life_exp, fill = country))+geom_col(position = "dodge")+
   labs(title = "Life Expectancy of United States v Mexico")
 ```
+
+![](hw11_files/figure-html/unnamed-chunk-16-1.png)<!-- -->
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences. 
