--- a/homework/hw12.Rmd
+++ b/homework/hw12.Rmd
@@ -3,9 +3,9 @@ title: "Homework 12"
 author: "Please Add Your Name Here"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: true
 ---
 
 ```{r setup, include=FALSE}
@@ -24,6 +24,11 @@ library(janitor)
 library(ggmap)
 ``` 
 
+## API key
+```{r}
+register_stadiamaps("aff428bd-8ad7-4b69-8b6b-b34301483ba9", write = FALSE)
+```
+
 ## Load the Data
 We will use two separate data sets for this homework.  
 
@@ -31,26 +36,97 @@ We will use two separate data sets for this homework.
 
 2. The second data set is from Brandell, Ellen E (2021), Serological dataset and R code for: Patterns and processes of pathogen exposure in gray wolves across North America, Dryad, [Dataset](https://doi.org/10.5061/dryad.5hqbzkh51).  
 
-1. Load the `grizzly` data and evaluate its structure.  
+1. Load the `grizzly` data and evaluate its structure.
+```{r}
+grizzly <- read_csv("data/bear-sightings.csv") %>% clean_names()
+```
+```{r}
+glimpse(grizzly)
+```
 
 2. Use the range of the latitude and longitude to build an appropriate bounding box for your map. 
-3. Load a map from `stamen` in a terrain style projection and display the map.  
+```{r}
+grizzly %>% 
+  select(latitude, longitude) %>% 
+  summary()
+```
+```{r}
+latitude <- c(55.02, 70.37)
+longitude <- c(-166.2, -131.3)
+bbox_grizzly <- make_bbox(longitude, latitude, f = 0.03) #f is the fraction of the bounding box to add to the range, longitude first, lat second. .03 start, this number is very sensitive
+```
 
-4. Build a final map that overlays the recorded observations of grizzly bears in Alaska.  
+3. Load a map from `stamen` in a terrain style projection and display the map.  
+```{r}
+grizzly_map <- get_stadiamap(bbox_grizzly, maptype = "stamen_terrain", zoom=4) #zoom is also very sensitive
+
+```
+```{r}
+ggmap(grizzly_map)
+```
+
+4. Build a final map that overlays the recorded observations of grizzly bears in Alaska.
+```{r}
+ggmap(grizzly_map) + 
+  geom_point(data = grizzly, aes(longitude, latitude), size=0.5) +
+  labs(x= "Longitude", y= "Latitude", title="Grizzly Bears in Alaska")
+```
 
 Let's switch to the wolves data. Brandell, Ellen E (2021), Serological dataset and R code for: Patterns and processes of pathogen exposure in gray wolves across North America, Dryad, [Dataset](https://doi.org/10.5061/dryad.5hqbzkh51).  
 
-5. Load the data and evaluate its structure.  
+5. Load the data and evaluate its structure. 
+```{r}
+wolves <- read_csv("data/wolves_data/wolves_dataset.csv") %>% clean_names()
+```
 
-6. How many distinct wolf populations are included in this study? Mae a new object that restricts the data to the wolf populations in the lower 48 US states.  
+```{r}
+glimpse(wolves)
+```
+
+6. How many distinct wolf populations are included in this study? Mae a new object that restricts the data to the wolf populations in the lower 48 US states. 
+```{r}
+wolves %>% 
+  count(pop)
+```
+```{r}
+lower_48 <- wolves %>% 
+  filter(pop %in% c("MT", "YNP", "GTNP", "SNF", "MI"))
+```
 
 7. Use the range of the latitude and longitude to build an appropriate bounding box for your map. 
+```{r}
+lower_48 %>% 
+  select(lat, long) %>% 
+  summary()
+```
+```{r}
+lat <- c(43.82, 47.75)
+long <- c(-110.99, -86.82)
+bbox_wolf <- make_bbox(long, lat, f = 0.03) #f is the fraction of the bounding box to add to the range, longitude first, lat second. .03 start, this number is very sensitive
+```
 
 8.  Load a map from `stamen` in a `terrain-lines` projection and display the map.  
+```{r}
+wolves_map <- get_stadiamap(bbox_wolf, maptype = "stamen_terrain_lines", zoom=7) #zoom is also very sensitive
+```
 
-9. Build a final map that overlays the recorded observations of wolves in the lower 48 states.  
+```{r}
+ggmap(wolves_map)
+```
 
-10. Use the map from #9 above, but add some aesthetics. Try to `fill` and `color` by population.  
+9. Build a final map that overlays the recorded observations of wolves in the lower 48 states.
+```{r}
+ggmap(wolves_map)+ 
+  geom_point(data = lower_48, aes(long, lat), size=0.6) +
+  labs(x= "Longitude", y= "Latitude", title="Wolf Observations in Lower 48 States")
+```
+
+10. Use the map from #9 above, but add some aesthetics. Try to `fill` and `color` by population.
+```{r}
+ggmap(wolves_map)+ 
+  geom_point(data = lower_48, aes(long, lat, color = pop), size=1) +
+  labs(x= "Longitude", y= "Latitude", title="Wolf Observations in Lower 48 States")
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences. 
