--- a/homework/hw12.Rmd
+++ b/homework/hw12.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 12"
-author: "Please Add Your Name Here"
+author: Carmen Doria
 date: "`r Sys.Date()`"
 output:
   html_document: 
