--- a/homework/hw12.md
+++ b/homework/hw12.md
@@ -1,6 +1,6 @@
 ---
 title: "Homework 12"
-author: "Please Add Your Name Here"
+author: Carmen Doria
 date: "2024-03-02"
 output:
   html_document: 
