--- a/lab15/hw15.Rmd
+++ b/lab15/hw15.Rmd
@@ -2,7 +2,9 @@
 title: "BIS15L_AI_hmwk"
 author: Carmen Doria
 date: "`r Sys.Date()`"
-output: html_document
+output: 
+  html_document: 
+    keep_md: true
 ---
 
 ```{r setup, include=FALSE}
